--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://unpkg.com/tailwindcss@1.2.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<body class="h-screen overflow-hidden flex items-center justify-center" style="background: #edf2f7;">
-    <div class="h-screen w-screen flex items-center justify-center bg-gray-200 ">
+<body class="flex items-center justify-center h-screen overflow-hidden" style="background: #edf2f7;">
+    <div class="flex items-center justify-center w-screen h-screen bg-gray-200 ">
   <link rel="stylesheet" href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css">
   <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
 
@@ -19,10 +19,10 @@
 
   <div class="antialiased sans-serif">
       <div x-data="app()" x-init="[initDate(), getNoOfDays()]" x-cloak>
-          <div class="container mx-auto px-4 py-2 md:py-10">
-              <div class="mb-5 w-64">
+          <div class="container px-4 py-2 mx-auto md:py-10">
+              <div class="w-64 mb-5">
 
-                  <label for="datepicker" class="font-bold mb-1 text-gray-700 block">Select Date</label>
+                  <label for="datepicker" class="block mb-1 font-bold text-gray-700">Select Date</label>
                   <div class="relative">
                       <input type="hidden" name="date" x-ref="date">
                       <input 
@@ -31,67 +31,67 @@
                           x-model="datepickerValue"
                           @click="showDatepicker = !showDatepicker"
                           @keydown.escape="showDatepicker = false"
-                          class="w-full pl-4 pr-10 py-3 leading-none rounded-lg shadow-sm focus:outline-none focus:shadow-outline text-gray-600 font-medium"
+                          class="w-full py-3 pl-4 pr-10 font-medium leading-none text-gray-600 rounded-lg shadow-sm focus:outline-none focus:shadow-outline"
                           placeholder="Select date">
 
                           <div class="absolute top-0 right-0 px-3 py-2">
-                              <svg class="h-6 w-6 text-gray-400"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <svg class="w-6 h-6 text-gray-400"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
                               </svg>
                           </div>
 
                           <div 
-                              class="bg-white mt-12 rounded-lg shadow p-4 absolute top-0 left-0" 
+                              class="absolute top-0 left-0 p-4 mt-12 bg-white rounded-lg shadow" 
                               style="width: 17rem" 
                               x-show.transition="showDatepicker"
                               @click.away="showDatepicker = false">
 
-                              <div class="flex justify-between items-center mb-2">
+                              <div class="flex items-center justify-between mb-2">
                                 <div>
                                     <button 
                                         type="button"
-                                        class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full" 
+                                        class="inline-flex p-1 transition duration-100 ease-in-out rounded-full cursor-pointer hover:bg-gray-200" 
 
                                         @click="year--; getNoOfDays()">
-                                        <svg class="h-6 w-6 text-gray-500 inline-flex"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <svg class="inline-flex w-6 h-6 text-gray-500"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
                                         </svg>  
                                     </button>
                                 </div>
                                 <div>
-                                    <span x-text="year" class="ml-1 text-lg text-gray-600 font-normal"></span>
+                                    <span x-text="year" class="ml-1 text-lg font-normal text-gray-600"></span>
                                 </div>
                                 <div>
                                     <button 
                                         type="button"
-                                        class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full" 
+                                        class="inline-flex p-1 transition duration-100 ease-in-out rounded-full cursor-pointer hover:bg-gray-200" 
                                         @click="year++; getNoOfDays()">
-                                        <svg class="h-6 w-6 text-gray-500 inline-flex"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                        <svg class="inline-flex w-6 h-6 text-gray-500"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                         </svg>									  
                                     </button>
                                 </div>
                               </div>
 
-                              <div class="flex justify-between items-center mb-2">
+                              <div class="flex items-center justify-between mb-2">
                                   <div>
                                       <span x-text="MONTH_NAMES[month]" class="text-lg font-bold text-gray-800"></span>
                                   </div>
                                   <div>
                                       <button 
                                           type="button"
-                                          class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full" 
+                                          class="inline-flex p-1 transition duration-100 ease-in-out rounded-full cursor-pointer hover:bg-gray-200" 
 
                                           @click="month--; getNoOfDays()">
-                                          <svg class="h-6 w-6 text-gray-500 inline-flex"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                          <svg class="inline-flex w-6 h-6 text-gray-500"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"/>
                                           </svg>  
                                       </button>
                                       <button 
                                           type="button"
-                                          class="transition ease-in-out duration-100 inline-flex cursor-pointer hover:bg-gray-200 p-1 rounded-full" 
+                                          class="inline-flex p-1 transition duration-100 ease-in-out rounded-full cursor-pointer hover:bg-gray-200" 
                                           @click="month++; getNoOfDays()">
-                                          <svg class="h-6 w-6 text-gray-500 inline-flex"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                          <svg class="inline-flex w-6 h-6 text-gray-500"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"/>
                                           </svg>									  
                                       </button>
@@ -103,7 +103,7 @@
                                       <div style="width: 14.26%" class="px-1">
                                           <div
                                               x-text="day" 
-                                              class="text-gray-800 font-medium text-center text-xs"></div>
+                                              class="text-xs font-medium text-center text-gray-800"></div>
                                       </div>
                                   </template>
                               </div>
@@ -112,7 +112,7 @@
                                   <template x-for="blankday in blankdays">
                                       <div 
                                           style="width: 14.28%"
-                                          class="text-center border p-1 border-transparent text-sm"	
+                                          class="p-1 text-sm text-center border border-transparent"	
                                       ></div>
                                   </template>	
                                   <template x-for="(date, dateIndex) in no_of_days" :key="dateIndex">	
@@ -120,7 +120,7 @@
                                           <div
                                               @click="getDateValue(date)"
                                               x-text="date"
-                                              class="cursor-pointer text-center text-sm leading-none rounded-full leading-loose transition ease-in-out duration-100"
+                                              class="text-sm leading-none leading-loose text-center transition duration-100 ease-in-out rounded-full cursor-pointer"
                                               :class="{'font-semibold': isToday(date) == true, ' hover:bg-blue-200': isToday(date) == false, 'font-semibold bg-red-500 text-white': isSelectedDate(date) == true, }"	
                                           ></div>
                                       </div>
