--- a/input.html
+++ b/input.html
@@ -12,7 +12,7 @@
         <script defer src="https://unpkg.com/@alpinejs/mask@3.x.x/dist/cdn.min.js"></script>
  
         <!-- Alpine Core -->
-        <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.min.js" defer></script>
 
   <style>
     [x-cloak] {
@@ -21,50 +21,98 @@
   </style>
 
   <div class="antialiased sans-serif">
-      <div x-data="{ dateValue: '' }" x-cloak>
+      <div x-data="{ dateValue : '' }">
           <div class="container px-4 py-2 mx-auto md:py-10">
               <div class="w-64 mb-5">
 
                   <label for="datepicker" class="block mb-1 font-bold text-gray-700">Select Date</label>
                   <div class="relative">
                       <input 
+                          id="date"
                           type="text"
                           x-model="dateValue"
-                          x-mask="99-99-9999"
                           class="w-full py-3 pr-4 font-medium leading-none text-gray-600 rounded-lg shadow-sm pl-14 focus:outline-none focus:shadow-outline"
-                          placeholder="DD-MM-YY"
-                          maxlength="10">
+                          placeholder="DD-MM-YY">
 
                           <div class="absolute top-0 left-0 px-3 py-3.1 rounded-l-lg bg-red-500">
                               <svg class="w-5 h-5 text-gray-400"  fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                   <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z"/>
                               </svg>
                           </div>
-
-
-                         
-
                   </div>	 
               </div>
 
           </div>
       </div>
 
-      <script>
-        tailwind.config = {
-          theme: {
-            extend: {
-              colors: {
-                clifford: '#da373d',
-              },
-              padding: {
-                  '3.1' : '0.775rem'
-              }
-            }
-          }
-        }
-      </script>
     </div>
 </div>
+<script>
+  tailwind.config = {
+    theme: {
+      extend: {
+        colors: {
+          clifford: '#da373d',
+        },
+        padding: {
+            '3.1' : '0.775rem'
+        }
+      }
+    }
+  }
+</script>
+<script type="text/javascript">
+  var date = document.getElementById('date');
+
+  function checkValue(str, max) {
+    if (str.charAt(0) !== '0' || str == '00') {
+      var num = parseInt(str);
+      if (isNaN(num) || num <= 0 || num > max) num = 1;
+      str = num > parseInt(max.toString().charAt(0)) && num.toString().length == 1 ? '0' + num : num.toString();
+    };
+    return str;
+  };
+
+  date.addEventListener('input', function(e) {
+    this.type = 'text';
+    var input = this.value;
+    if (/\D\/$/.test(input)) input = input.substr(0, input.length - 3);
+    var values = input.split('-').map(function(v) {
+      return v.replace(/\D/g, '')
+    });
+    if (values[0]) values[0] = checkValue(values[0], 12);
+    if (values[1]) values[1] = checkValue(values[1], 31);
+    var output = values.map(function(v, i) {
+      return v.length == 2 && i < 2 ? v + ' - ' : v;
+    });
+    this.value = output.join('').substr(0, 14);
+  });
+
+  date.addEventListener('blur', function(e) {
+    this.type = 'text';
+    var input = this.value;
+    var values = input.split('-').map(function(v, i) {
+      return v.replace(/\D/g, '')
+    });
+    var output = '';
+
+    if (values.length == 3) {
+      var year = values[2].length !== 4 ? parseInt(values[2]) + 2000 : parseInt(values[2]);
+      var month = parseInt(values[0]) - 1;
+      var day = parseInt(values[1]);
+      var d = new Date(year, month, day);
+      if (!isNaN(d)) {
+        document.getElementById('result').innerText = d.toString();
+        var dates = [d.getMonth() + 1, d.getDate(), d.getFullYear()];
+        output = dates.map(function(v) {
+          v = v.toString();
+          return v.length == 1 ? '0' + v : v;
+        }).join(' - ');
+      };
+    };
+    this.value = output;
+  });
+
+</script>
 </body>
 </html>
